--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "ember": "~2.10.0",
     "ember-cli-shims": "0.1.3",
     "firebase": "^3.0.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "materialize": "0.97.6"
   }
 }
