--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "broccoli-sass-source-maps": "^2.0.0",
     "ember-ajax": "^2.4.1",
     "ember-bootstrap": "1.0.0-alpha.2",
     "ember-cli": "2.10.0",
@@ -28,13 +29,22 @@
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.3.7",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-keyboard": "1.0.3",
     "ember-load-initializers": "^0.5.1",
+    "ember-material-design-icons-shim": "0.1.10",
+    "ember-materialize-shim": "0.2.3",
+    "ember-modal-dialog": "0.8.8",
+    "ember-new-computed": "1.0.3",
+    "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "ember-welcome-page": "^1.0.3",
     "emberfire": "2.0.5",
     "loader.js": "^4.0.10"
